--- a/index.html
+++ b/index.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/b456e08e90.js" crossorigin="anonymous"></script>
     <title>Bloomberg.com</title>
   </head>
-  <body></body>
+  <body>
+    <div class="nav-grid-container">
+      <div class="sub-nav">
+        <div class="sub-nav-flex">
+          <ul>
+            <li>
+              <a href="https://www.bloomberg.com/middleeast" target="_blank"
+                >Bloomberg the Company & Its Products &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i>
+                &nbsp;&nbsp;&nbsp;&nbsp;|</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.bloomberg.com/professional/contact-menu/?utm_source=bloomberg-menu&utm_medium=bcom&bbgsum=DG-WS-PROF-DEMO-bbgmenu"
+                target="_blank"
+                >Bloomberg Terminal Demo Request &nbsp;&nbsp;&nbsp;&nbsp;|</a
+              >
+            </li>
+            <li>
+              <a href="https://bba.bloomberg.net/?utm_source=bloomberg-menu&utm_medium=bcom" target="_blank"
+                ><i class="fa-solid fa-desktop"></i>
+                <span>Bloomberg Anywhere Remote Login &nbsp;&nbsp;&nbsp;&nbsp; </span>|</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.bloomberg.com/professional/support/?utm_source=bloomberg-menu&utm_medium=bcom"
+                target="_blank"
+                >Bloomberg Customer Support
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="main-nav"></div>
+    </div>
+  </body>
 </html>
