finishing the main nav

--- a/index.html
+++ b/index.html
@@ -19,29 +19,40 @@
               >
             </li>
             <li>
-              <a
-                href="https://www.bloomberg.com/professional/contact-menu/?utm_source=bloomberg-menu&utm_medium=bcom&bbgsum=DG-WS-PROF-DEMO-bbgmenu"
-                target="_blank"
-                >Bloomberg Terminal Demo Request &nbsp;&nbsp;&nbsp;&nbsp;|</a
-              >
+              <a href="#">Bloomberg Terminal Demo Request &nbsp;&nbsp;&nbsp;&nbsp;|</a>
             </li>
             <li>
-              <a href="https://bba.bloomberg.net/?utm_source=bloomberg-menu&utm_medium=bcom" target="_blank"
+              <a href="#"
                 ><i class="fa-solid fa-desktop"></i>
                 <span>Bloomberg Anywhere Remote Login &nbsp;&nbsp;&nbsp;&nbsp; </span>|</a
               >
             </li>
             <li>
-              <a
-                href="https://www.bloomberg.com/professional/support/?utm_source=bloomberg-menu&utm_medium=bcom"
-                target="_blank"
-                >Bloomberg Customer Support
-              </a>
+              <a href="">Bloomberg Customer Support </a>
             </li>
           </ul>
         </div>
       </div>
-      <div class="main-nav"></div>
+      <div class="main-nav">
+        <div class="main-nav-left">
+          <h2>Bloomberg</h2>
+        </div>
+        <div class="main-nav-right">
+          <ul>
+            <li>
+              <a href="#">Middle East Edition &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i></a>
+            </li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#" id="subscribe">Subscribe</a></li>
+            <li>
+              <a href="3" class="magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+    <main>
+      <div class="content"></div>
+    </main>
   </body>
 </html>
