adding news links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,28 @@
       </div>
     </div>
     <main>
-      <div class="content"></div>
+      <div class="content">
+        <ul>
+          <li><a href="">Live Now</a></li>
+          <li><a href="">Markets</a></li>
+          <li><a href="">Economics</a></li>
+          <li><a href="">Industries</a></li>
+          <li><a href="">Tech</a></li>
+          <li><a href="">Al</a></li>
+          <li><a href="">Politics</a></li>
+          <li><a href="">Wealth</a></li>
+          <li><a href="">Pursuits</a></li>
+          <li><a href="">Opinion</a></li>
+          <li><a href="">Businessweek</a></li>
+          <li><a href="">Equality</a></li>
+          <li><a href="">Green</a></li>
+          <li><a href="">CityLab</a></li>
+          <li><a href="">Crypto</a></li>
+          <li>
+            <a href="">More</a>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
