adding stock market links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <main>
       <div class="content">
-        <ul>
+        <ul class="news-links">
           <li><a href="">Live Now</a></li>
           <li><a href="">Markets</a></li>
           <li><a href="">Economics</a></li>
@@ -71,6 +71,38 @@
           <li><a href="">Crypto</a></li>
           <li>
             <a href="">More</a>
+          </li>
+        </ul>
+        <ul class="stock-market">
+          <li>
+            <a href=""
+              >S&P 500<span>4,411.59 <i class="fa-solid fa-caret-down">&nbsp;-0.79%</i></span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              >Nasdaq<span>13,679.04 <i class="fa-solid fa-caret-down">&nbsp;-1.64%</i></span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              >Crude Oil<span>71.85 <i class="fa-solid fa-caret-up">&nbsp;+0.31%</i></span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              >US 10 Yr<span>4.04<i class="fa-solid fa-caret-down">&nbsp;-0.05%</i></span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              >Euro<span>1.09 <i class="fa-solid fa-caret-up">&nbsp;+0.49%</i></span></a
+            >
+          </li>
+          <li>
+            <a href=""
+              >Dow Jones<span>33,922.26<i class="fa-solid fa-caret-down">&nbsp;-1.17%</i></span></a
+            >
           </li>
         </ul>
       </div>
