adding the starter elements for the article grid

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
             >
           </li>
         </ul>
+        <div class="articles">
+          <div class="main-article">1</div>
+          <div class="left-aside-articles">2</div>
+          <div class="right-aside-articles">3</div>
+          <div class="sub-article">4</div>
+          <div class="smaller-articles1">5</div>
+          <div class="smaller-articles2">6</div>
+          <div class="smaller-articles3">7</div>
+          <div class="smaller-articles4">8</div>
+        </div>
       </div>
     </main>
   </body>
