--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
           </li>
         </ul>
         <div class="articles">
-          <div class="main-article">1</div>
+          <div class="main-article">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+          </div>
           <div class="left-aside-articles">2</div>
           <div class="right-aside-articles">3</div>
           <div class="sub-article">4</div>
