--- a/index.html
+++ b/index.html
@@ -107,10 +107,14 @@
         </ul>
         <div class="articles">
           <div class="main-article">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
+            <div class="main-article-img"></div>
+            <div class="main-article-header">
+              <h1>Stock Market Short Sellers That Helped Fuel This Year’s Rally Are Finally Giving Up</h1>
+            </div>
+
+            <div class="main-article-p1"><p>Payrolls Data Showing Wage Gains Keeps Fed on Track to Hike Rates</p></div>
+            <div class="main-article-p2"><p>The US Labor Market Is Starting to Show Cracks. Here Are the Signs</p></div>
+            <div class="main-article-p3"><p>Stock Investors Are on Notice After Wall Street’s Fear Gauge Jumps</p></div>
           </div>
           <div class="left-aside-articles">2</div>
           <div class="right-aside-articles">3</div>
