finising sub-article

--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@
           </div>
           <div class="left-aside-articles">2</div>
           <div class="right-aside-articles">3</div>
-          <div class="sub-article">4</div>
+          <div class="sub-article">
+            <div class="sub-article-img"></div>
+            <div class="sub-article-content">
+              <h2>Ultra-Wealthy Continue to Prop Up Dubai’s Luxury Property Market</h2>
+              <p>Dubai’s Luxury Real Estate Sales Drive Global Rebound</p>
+              <p>Dorchester Collection to Open First Dubai Hotel by Year End</p>
+              <p>A $204 Million Mansion Is Dubai’s Most Expensive House for Sale</p>
+            </div>
+          </div>
           <div class="smaller-articles1">5</div>
           <div class="smaller-articles2">6</div>
           <div class="smaller-articles3">7</div>
