adding more articles

--- a/index.html
+++ b/index.html
@@ -116,7 +116,37 @@
             <div class="main-article-p2"><p>The US Labor Market Is Starting to Show Cracks. Here Are the Signs</p></div>
             <div class="main-article-p3"><p>Stock Investors Are on Notice After Wall Street’s Fear Gauge Jumps</p></div>
           </div>
-          <div class="left-aside-articles">2</div>
+          <div class="left-aside-articles">
+            <h3 class="latest big-h3">LATEST</h3>
+            <div>
+              <h4 class="article-topics">Commodities</h4>
+              <h3 class="small-h3">Petrobras Expects to Fall Short of Government Gas-Price Target</h3>
+              <h5 class="article-time">updated 45m ago</h5>
+            </div>
+            <div>
+              <h4 class="article-topics">Markets</h4>
+              <h3 class="small-h3">Argentina’s Pan American Energy Joins Oil Industry’s Push Into Lithium</h3>
+              <h5 class="article-time">52m ago</h5>
+            </div>
+            <div>
+              <h4 class="article-topics">Politics</h4>
+              <h3 class="small-h3">Donald Trump Blasts Ron DeSantis on Important Issue to Iowa Voters: Ethanol</h3>
+              <h5 class="article-time">1h ago</h5>
+            </div>
+            <h3 class="most-read big-h3">MOST READ</h3>
+            <div>
+              <h2>1<span class="article-topics">Politics</span></h2>
+              <h3 class="small-h3">Chinese Foreign Minister’s Unusual 12-Day Absence Draws Scrutiny</h3>
+            </div>
+            <div>
+              <h2>1<span class="article-topics">Technology</span></h2>
+              <h3 class="small-h3">Meta’s Threads Has 70 Million Signups, Surprising Zuckerberg</h3>
+            </div>
+            <div>
+              <h2>1<span class="article-topics">Technology</span></h2>
+              <h3 class="small-h3">CEO Who Grew Up in Poverty Builds Rare $1.4 Billion Fish Startup</h3>
+            </div>
+          </div>
           <div class="right-aside-articles">3</div>
           <div class="sub-article">
             <div class="sub-article-img"></div>
