adding right aside

--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
             <div>
               <h4 class="article-topics">Commodities</h4>
               <h3 class="small-h3">Petrobras Expects to Fall Short of Government Gas-Price Target</h3>
-              <h5 class="article-time">updated 45m ago</h5>
+              <h5 class="small-font">updated 45m ago</h5>
             </div>
             <div>
               <h4 class="article-topics">Markets</h4>
               <h3 class="small-h3">Argentina’s Pan American Energy Joins Oil Industry’s Push Into Lithium</h3>
-              <h5 class="article-time">52m ago</h5>
+              <h5 class="small-font">52m ago</h5>
             </div>
             <div>
               <h4 class="article-topics">Politics</h4>
               <h3 class="small-h3">Donald Trump Blasts Ron DeSantis on Important Issue to Iowa Voters: Ethanol</h3>
-              <h5 class="article-time">1h ago</h5>
+              <h5 class="small-font">1h ago</h5>
             </div>
             <h3 class="most-read big-h3">MOST READ</h3>
             <div>
@@ -139,15 +139,49 @@
               <h3 class="small-h3">Chinese Foreign Minister’s Unusual 12-Day Absence Draws Scrutiny</h3>
             </div>
             <div>
-              <h2>1<span class="article-topics">Technology</span></h2>
+              <h2>2<span class="article-topics">Technology</span></h2>
               <h3 class="small-h3">Meta’s Threads Has 70 Million Signups, Surprising Zuckerberg</h3>
             </div>
             <div>
-              <h2>1<span class="article-topics">Technology</span></h2>
+              <h2>3<span class="article-topics">Technology</span></h2>
               <h3 class="small-h3">CEO Who Grew Up in Poverty Builds Rare $1.4 Billion Fish Startup</h3>
             </div>
           </div>
-          <div class="right-aside-articles">3</div>
+          <div class="right-aside-articles">
+            <h2 class="right-aside-h2">Bloomberg<span>Opinion</span></h2>
+            <div>
+              <h4 class="names-header">Stephen L. Carter</h4>
+              <h3 class="small-h3">Social Media Rebuff Shows Biden Overstepped on Covid Misinformation</h3>
+            </div>
+            <div>
+              <h4 class="names-header">Brooke Sample</h4>
+              <h3 class="small-h3">Nike Is Feeling the Post-Pandemic Pinch</h3>
+            </div>
+            <div>
+              <h4 class="names-header">Tyler Cowen</h4>
+              <h3 class="small-h3">New York's Congestion Pricing Plan Is Bad Economics</h3>
+            </div>
+            <div>
+              <h4 class="names-header">Martin Ivens</h4>
+              <h3 class="small-h3">Why We're Losing Faith in the 'Church' of the NHS</h3>
+            </div>
+            <h5>MORE FROM OPINION</h5>
+            <div class="news-letter">
+              <h3>Bloomberg Middle East</h3>
+              <p class="article-time">Our weekly newsletter looks at what's happening in the region and what's next.</p>
+              <form>
+                <input type="email" name="email" id="email" placeholder="Enter your email please!" />
+                <button>Sigh Up</button>
+                <div class="check">
+                  <input type="checkbox" />
+                  <label for="checkbox" class="small-font">Bloomberg may send me offers and promotions.</label>
+                </div>
+              </form>
+              <div class="small-font">
+                By submitting my information, I agree to the <u>Privacy Policy</u> and <u>Terms of Service</u> .
+              </div>
+            </div>
+          </div>
           <div class="sub-article">
             <div class="sub-article-img"></div>
             <div class="sub-article-content">
