finishing the right aside

--- a/index.html
+++ b/index.html
@@ -191,10 +191,9 @@
               <p>A $204 Million Mansion Is Dubai’s Most Expensive House for Sale</p>
             </div>
           </div>
-          <div class="smaller-articles1">5</div>
-          <div class="smaller-articles2">6</div>
-          <div class="smaller-articles3">7</div>
-          <div class="smaller-articles4">8</div>
+          <div class="smaller-articles">5</div>
+          <div class="world-wide-articles">7</div>
+          <div class="live-articles">8</div>
         </div>
       </div>
     </main>
