finishing the footer

--- a/index.html
+++ b/index.html
@@ -191,11 +191,94 @@
               <p>A $204 Million Mansion Is Dubai’s Most Expensive House for Sale</p>
             </div>
           </div>
-          <div class="smaller-articles">5</div>
-          <div class="world-wide-articles">7</div>
-          <div class="live-articles">8</div>
+          <div class="smaller-articles">
+            <div>
+              <h4 class="article-topics">Markets</h4>
+              <h3 class="small-h3">Erdogan Says Turkey Wants Three-Month Extension of Grain Deal</h3>
+              <p>The safe-transit deal has been a vital lifeline for Ukrainian exports.</p>
+              <h5 class="small-font">updated 5 hours ago</h5>
+            </div>
+            <div>
+              <h4 class="article-topics">Politics</h4>
+              <h3 class="small-h3">Ukraine Recap: Zelenskiy Marks 500th Day of War on Snake Island</h3>
+              <p>Russia’s invasion of Ukraine hits the 500-day mark.</p>
+              <h5 class="small-font">updated 3 hours ago</h5>
+            </div>
+            <div>
+              <h4 class="article-topics">Markets</h4>
+              <h3 class="small-h3">Summers Warns on Inflation Complacency, Sees More Bond Declines</h3>
+              <p>Investors are adjusting to the need for more monetary tightening.</p>
+              <h5 class="small-font">updated 2 hours ago</h5>
+            </div>
+            <div>
+              <h4 class="article-topics">Markets</h4>
+              <h3 class="small-h3">Pemex Platform Explosion Leaves Two Dead, Impacts Output</h3>
+              <p>The blast will impact “many thousands of barrels” of output, CEO says.</p>
+              <h5 class="small-font">updated 6 hours ago</h5>
+            </div>
+          </div>
+          <div class="world-wide-articles">
+            <div>
+              <iframe
+                width="200"
+                height="150"
+                src="https://www.youtube.com/embed/8haRW7F_WY0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+              <h4 class="article-topics">Technology</h4>
+              <h3 class="small-h3">US Employers Added Fewer Jobs in June Than Projected</h3>
+            </div>
+            <div>
+              <img src="/assets/images/world-wide-article-1.jpg" alt="" />
+              <h4 class="article-topics">QuickTake</h4>
+              <h3 class="small-h3">Why Tesla’s EV Charging Plugs Are Becoming Industry Standard</h3>
+            </div>
+            <div>
+              <img src="/assets/images/world-wide-article-2.jpg" alt="" />
+              <h4 class="article-topics">Pursuits</h4>
+              <h3 class="small-h3">Italy’s Latest Night Train Is a €25,000 Luxury Getaway on Rails</h3>
+            </div>
+            <div>
+              <img src="/assets/images/world-wide-article-3.jpg" alt="" />
+              <h4 class="article-topics">Technology</h4>
+              <h3 class="small-h3">Apple Plans a Slow, Appointment-Only Rollout of Its $3,500 Vision Pro</h3>
+            </div>
+            <div>
+              <img src="/assets/images/world-wide-article-4.jpg" alt="" />
+              <h4 class="article-topics">Business</h4>
+              <h3 class="small-h3">What Air Traffic Control Strike Means for European Travel</h3>
+            </div>
+            <div>
+              <img src="/assets/images/world-wide-article-5.jpg" alt="" />
+              <h4 class="article-topics">The Big Take</h4>
+              <h3 class="small-h3">Barbie Movie Is About More Than Selling Dolls for Mattel</h3>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="left-footer-content">
+        <ul>
+          <li><a href="">Terms of Service</a></li>
+          <li><a href=""> Do Not Sell or Share My Personal Information</a></li>
+          <li><a href="">Trademarks</a></li>
+          <li><a href="">Privacy Policy</a></li>
+        </ul>
+        <p>©2023 Bloomberg L.P. All Rights Reserved</p>
+      </div>
+      <div class="right-footer-content">
+        <ul>
+          <li><a href="">Careers </a></li>
+          <li><a href=""> Made in NYC</a></li>
+          <li><a href="">Advertise </a></li>
+          <li><a href="">Ad Choices</a></li>
+          <li><a href="">Help</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
