fixing width in main articles

--- a/index.html
+++ b/index.html
@@ -8,49 +8,51 @@
     <title>Bloomberg.com</title>
   </head>
   <body>
-    <div class="nav-grid-container">
-      <div class="sub-nav">
-        <div class="sub-nav-flex">
-          <ul>
-            <li>
-              <a href="https://www.bloomberg.com/middleeast" target="_blank"
-                >Bloomberg the Company & Its Products &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i>
-                &nbsp;&nbsp;&nbsp;&nbsp;|</a
-              >
-            </li>
-            <li>
-              <a href="#">Bloomberg Terminal Demo Request &nbsp;&nbsp;&nbsp;&nbsp;|</a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fa-solid fa-desktop"></i>
-                <span>Bloomberg Anywhere Remote Login &nbsp;&nbsp;&nbsp;&nbsp; </span>|</a
-              >
-            </li>
-            <li>
-              <a href="">Bloomberg Customer Support </a>
-            </li>
-          </ul>
+    <nav>
+      <div class="nav-grid-container">
+        <div class="sub-nav">
+          <div class="sub-nav-flex">
+            <ul>
+              <li>
+                <a href="https://www.bloomberg.com/middleeast" target="_blank"
+                  >Bloomberg the Company & Its Products &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i>
+                  &nbsp;&nbsp;&nbsp;&nbsp;|</a
+                >
+              </li>
+              <li>
+                <a href="#">Bloomberg Terminal Demo Request &nbsp;&nbsp;&nbsp;&nbsp;|</a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="fa-solid fa-desktop"></i>
+                  <span>Bloomberg Anywhere Remote Login &nbsp;&nbsp;&nbsp;&nbsp; </span>|</a
+                >
+              </li>
+              <li>
+                <a href="">Bloomberg Customer Support </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="main-nav">
+          <div class="main-nav-left">
+            <h2>Bloomberg</h2>
+          </div>
+          <div class="main-nav-right">
+            <ul>
+              <li>
+                <a href="#">Middle East Edition &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i></a>
+              </li>
+              <li><a href="#">Sign In</a></li>
+              <li><a href="#" id="subscribe">Subscribe</a></li>
+              <li>
+                <a href="3" class="magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="main-nav">
-        <div class="main-nav-left">
-          <h2>Bloomberg</h2>
-        </div>
-        <div class="main-nav-right">
-          <ul>
-            <li>
-              <a href="#">Middle East Edition &nbsp;&nbsp;<i class="fa-solid fa-caret-down"></i></a>
-            </li>
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#" id="subscribe">Subscribe</a></li>
-            <li>
-              <a href="3" class="magnifying-glass"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    </nav>
     <main>
       <div class="content">
         <ul class="news-links">
